# dfa_visualizer

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: gen-icns.cjs
src/: App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  config.rs  lib.rs  main.rs  tray.rs
src/components/: Overview.tsx  RankCard.tsx  RankingsGrid.tsx  Settings.tsx
src/styles/: app.css
