[package]
name = "dfa-visualizer"
version = "1.8.2"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "query", "rustls"], default-features = false }
tokio = { version = "1", features = ["full"] }
dirs = "6"
sysinfo = "0.35"

[profile.release]
strip = true
lto = "thin"
codegen-units = 4
panic = "abort"
